<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_authentication"
    app:startDestination="@id/authenticationFragment">

    <fragment
        android:id="@+id/authenticationFragment"
        android:name="com.example.greenpoint.ui.authentication.AuthenticationFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_authentication">
        <action
            android:id="@+id/action_authenticationFragment_to_signUpFragment"
            app:destination="@id/signUpFragment" />
        <action
            android:id="@+id/action_authenticationFragment_to_signInFragment"
            app:destination="@id/signInFragment" />
    </fragment>
    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.example.greenpoint.ui.signup.SignUpFragment"
        android:label="@string/sign_up_Fragment_label"
        tools:layout="@layout/fragment_sign_up" >
        <action
            android:id="@+id/action_signUpFragment_to_signInFragment"
            app:destination="@id/signInFragment"
            app:popUpTo="@id/signUpFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/signInFragment"
        android:name="com.example.greenpoint.ui.signin.SignInFragment"
        android:label="@string/sign_in_Fragment_label"
        tools:layout="@layout/fragment_sign_in" />
</navigation>