<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.signup.SignUpFragment">

    <TextView
        android:id="@+id/tv_app_name"
        style="@style/TextViewLogo"/>

        <TextView
            style="@style/TextViewDescription"
            android:text="@string/sign_up_description"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="25dp"
            android:elevation="10dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#D1FABF"
                android:orientation="vertical"
                android:padding="16dp">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_name_material"
                    style="@style/TextInputLayoutDefault"
                    android:hint="@string/name">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPersonName"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_email_material"
                    style="@style/TextInputLayoutDefault"
                    android:hint="@string/email">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_password_material"
                    style="@style/TextInputLayoutDefault"
                    android:hint="@string/password">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_password_confirmation_material"
                    style="@style/TextInputLayoutDefault"
                    android:hint="@string/password_confirmation">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password_confirmation"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_sign_up"
                    style="@style/ButtonDefault"
                    android:text="@string/sign_up_button"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>




</LinearLayout>
