<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.changepassword.ChangePasswordFragment">

    <TextView
        android:id="@+id/tv_app_name"
        style="@style/TextViewLogo"/>

    <TextView
        style="@style/TextViewDescription"
        android:text="@string/change_password_description"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="25dp"
        android:elevation="10dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#D1FABF"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_current_password_material"
                style="@style/TextInputLayoutDefault"
                android:hint="@string/current_password">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_current_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_new_password_material"
                style="@style/TextInputLayoutDefault"
                android:hint="@string/new_password">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_new_password_confirmation_material"
                style="@style/TextInputLayoutDefault"
                android:hint="@string/password_confirmation">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_new_password_confirmation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btn_change_password"
                style="@style/ButtonDefault"
                android:text="@string/change_password_button"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>